--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -4,7 +4,7 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566323.md#1" title="选举委员会主席：川普正将合法指控交法院""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/supreme-court-e1593757698727-1200x675-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566226.md#1" title="农民今年损失惨重 中共却开征私产宅基地费""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/1110290246031758-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565742.md#1" title="中国债务累计至GDP3.3倍 企业债居半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/AFP_China-construction-worker-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565761.md#1" title="【大选更新11.21】DC发起摩托骑行 继续挺川""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/2011142233551160-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565761.md#1" title="【大选更新11.21】美国人再聚华府 继续挺川""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/2011142233551160-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564664.md#1" title="《狮子王》复仇记：王位之争即正邪大战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/1907161125101470-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565131.md#1" title="川普政府拟再把四中企列入中共军企黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2013/01/1010201428232208-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564746.md#1" title="鲍威尔：四敌国介入过美国大选制表服务器""><img width="73" src="https://i.epochtimes.com/assets/uploads/2017/09/GettyImages-459271274-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/24/n12499541.md#1" title="【思想领袖】吉尼斯：如何应对中共无声入侵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-40-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" title="麦肯纳尼：为了“宪法程序” 川普不应让步""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://cvusyr3283.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564930.md#1">世界各国的主力战舰  欧洲的中型驱逐舰</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566391.md#1">朱利安尼：Dominion高管和安提法关系密切</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566417.md#1">彭斯：乔州参议员对决是共和党最后一道防线</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564930.md#1">世界各国的主力战舰  欧洲的中型驱逐舰</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566391.md#1">朱利安尼：Dominion高管和安提法关系密切</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566323.md#1">选举委员会主席：川普正将合法指控交法院</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566305.md#1">研究：戴口罩对预防中共病毒无显着效果</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566305.md#1">研究：戴口罩对预防中共病毒无显着效果</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
@@ -26,6 +26,7 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564539.md#1">上海夫妇染疫 南汇中心医院进微博热搜前三</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12562113.md#1">南京警方跨省拘吴景标和凉墨先生 网友吁关注</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563148.md#1">大陆多地新增确诊病例 纷纷出台限制令</a><br>
 <br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563838.md#1">【名家专栏】藏在健康气候议题下的权欲</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/16/n12552112.md#1">【独家】在海外为中共牵线的关键人物</a><br>
@@ -38,7 +39,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,964,318 人
+!共 367,964,343 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -103,7 +104,7 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12545751.md#1">【独家】内部文件泄一带一路“风险点”</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a><br>
 <br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565901.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/S__2818066-320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565901.md#1">李怀庆庭审当天 公民记者路过法院被传唤</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565076.md#1">五中全会进京被截访 上海访民：维权到底</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563301.md#1">吉林警察半夜铁棍砸门 绑架法轮功学员孙亚珍</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561751.md#1">太原法轮功学员周韶山一家三口被非法判刑</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12560099.md#1">他20亿身家遭官员洗劫 今沦为乞丐（下）</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565736.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565736.md#1">养老金缺口将达十万亿 中共欲延迟退休惹众怒</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565683.md#1">山东德州前首富受审 开罪官员3天内破产</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565601.md#1">越来越多美国人认为中共应赔偿瘟疫损失</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565185.md#1">中概股“跟谁学”第三季度净亏损逾9亿</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565062.md#1">大陆百城楼市库存超5亿平米 连续23月增长</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564139.md#1">华晨集团宣布破产重整 证监会立案调查</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/1506140027472669-600x400-320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1">拟对出生公民权采取行动 川普政府重启讨论</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565835.md#1">APEC领袖会议登场 张忠谋：愿分享台防疫经验</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565928.md#1">韩战史学家沈志华演讲遭举报 直播中断</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565655.md#1">台美经济对话达九大成果 深化紧密伙伴关系</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565606.md#1">港网台主持杰斯夫妇突被捕 曾募款助留台港人</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565088.md#1">台美经济对话成果 将展开科技合作协定咨商</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/5af43815b12881bc36e2386cf98e21cb-320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563148.md#1">大陆多地新增确诊病例 纷纷出台限制令</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562803.md#1">暴雪侵袭 牡丹江机场临时关闭 多机场取消航班</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562673.md#1">河南信阳送葬人发生车祸 至少9死4伤</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561073.md#1">山东泰安车祸致4死2伤 死者有一人是副局长</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561562.md#1">暴雪袭内蒙、东北 列车停运高速关闭</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565781.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565781.md#1">大陆疫情蔓延 内蒙古再曝2例本土病例</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565491.md#1">大陆人脸识别第一案宣判 原告欲再上诉</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565461.md#1">安徽女大学生被刺杀数十刀 杀人教师获死刑</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561508.md#1">广西灵山《武则天她妈在钦州》工作组挨轰</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12560385.md#1">江歌母起诉刘鑫理由曝光 刘鑫回应惹怒网民</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12560836.md#1">贵州女老师人行道上骑车 被迫电视道歉引质疑</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/17/n12554817.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/17/n12554817.md#1">中共抗日剧下架 网络负评如潮：严重不符史实</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12545730.md#1">隐瞒参与千人计划 美免疫学华裔专家认罪</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/12/n12543432.md#1">中共规定研究生导师“十不得” 舆论热议</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/11/n12540637.md#1">张家口一幼儿园疑用变质食物 官方说法不一</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/10/n12537787.md#1">传清华助理教授抛妻弃女 自称被家暴遭妻质问</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565901.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/S__2818066-320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565901.md#1">李怀庆庭审当天 公民记者路过法院被传唤</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565076.md#1">五中全会进京被截访 上海访民：维权到底</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563301.md#1">吉林警察半夜铁棍砸门 绑架法轮功学员孙亚珍</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561751.md#1">太原法轮功学员周韶山一家三口被非法判刑</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12560099.md#1">他20亿身家遭官员洗劫 今沦为乞丐（下）</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565736.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565736.md#1">养老金缺口将达十万亿 中共欲延迟退休惹众怒</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565683.md#1">山东德州前首富受审 开罪官员3天内破产</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565601.md#1">越来越多美国人认为中共应赔偿瘟疫损失</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565185.md#1">中概股“跟谁学”第三季度净亏损逾9亿</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565062.md#1">大陆百城楼市库存超5亿平米 连续23月增长</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564139.md#1">华晨集团宣布破产重整 证监会立案调查</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/1506140027472669-600x400-320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1">拟对出生公民权采取行动 川普政府重启讨论</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565835.md#1">APEC领袖会议登场 张忠谋：愿分享台防疫经验</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565928.md#1">韩战史学家沈志华演讲遭举报 直播中断</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565655.md#1">台美经济对话达九大成果 深化紧密伙伴关系</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565606.md#1">港网台主持杰斯夫妇突被捕 曾募款助留台港人</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565088.md#1">台美经济对话成果 将展开科技合作协定咨商</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/5af43815b12881bc36e2386cf98e21cb-320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562803.md#1">暴雪侵袭 牡丹江机场临时关闭 多机场取消航班</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562673.md#1">河南信阳送葬人发生车祸 至少9死4伤</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561073.md#1">山东泰安车祸致4死2伤 死者有一人是副局长</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561562.md#1">暴雪袭内蒙、东北 列车停运高速关闭</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12559988.md#1">黑龙江暴雪红色预警 哈尔滨机场取消逾百航班</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565781.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565781.md#1">大陆疫情蔓延 内蒙古再曝2例本土病例</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565491.md#1">大陆人脸识别第一案宣判 原告欲再上诉</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565461.md#1">安徽女大学生被刺杀数十刀 杀人教师获死刑</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561508.md#1">广西灵山《武则天她妈在钦州》工作组挨轰</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12560385.md#1">江歌母起诉刘鑫理由曝光 刘鑫回应惹怒网民</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12560836.md#1">贵州女老师人行道上骑车 被迫电视道歉引质疑</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/17/n12554817.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/17/n12554817.md#1">中共抗日剧下架 网络负评如潮：严重不符史实</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12545730.md#1">隐瞒参与千人计划 美免疫学华裔专家认罪</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/12/n12543432.md#1">中共规定研究生导师“十不得” 舆论热议</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/11/n12540637.md#1">张家口一幼儿园疑用变质食物 官方说法不一</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/10/n12537787.md#1">传清华助理教授抛妻弃女 自称被家暴遭妻质问</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/12/n12545208.md#1">【特稿】正邪相争 大选分左右 人民选未来</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/31/n12515304.md#1">【内幕】经营中美关系？盘点纽约统战组织(上)</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/25/n12500201.md#1">【独家】红三代揭武汉百亿假黄金局中局</a><br>
